--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,9 @@
-// TODO
+.headerContent {
+  max-width: 720px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  border-bottom: 1px solid rgba(44, 44, 44, 0.8);
+  img {
+    max-width: 200px;
+  }
+}
