--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,3 +11,33 @@
   --info: #bbbbbb;
   --body: #d7d7d7;
 }
+@media (max-width: 1080px) {
+  html {
+    font-size: 93%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87%;
+  }
+}
+
+body {
+  background: var(--background);
+  color: var(--heading);
+}
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem 'Inter', sans-serif;
+}
+button {
+  cursor: pointer;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
