--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -23,19 +23,44 @@
 
 .text {
   h2 {
-    font-size: 2.25rem;
+    font-size: 2rem;
   }
 
   h3 {
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: normal;
     margin-bottom: 1rem;
+    color: var(--info);
   }
 
   p {
     font-weight: normal;
     color: var(--info);
     font-size: 1rem;
-    line-height: 1.3;
+    line-height: 1.4;
+  }
+}
+
+.article {
+  .mainTitle {
+    color: var(--heading);
+    margin-bottom: 1rem;
+  }
+  p {
+    font-size: 1rem;
+    color: var(--info);
+    line-height: 1.4;
+    margin-bottom: 1rem;
+  }
+  font-weight: normal;
+
+  h2,
+  h3 {
+    color: var(--heading);
+  }
+  li {
+    list-style-type: none;
+    line-height: 1.4;
+    color: var(--info);
   }
 }
